--- a/ml/cc/exercises/linear_regression_taxi.ipynb
+++ b/ml/cc/exercises/linear_regression_taxi.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/AyushTomarOG/mltraining/blob/main/ml/cc/exercises/linear_regression_taxi.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "metadata": {
         "cellView": "form",
         "id": "X53vZqc7PxCA"
@@ -89,7 +79,7 @@
     {
       "metadata": {
         "id": "LihQB7ycKEnb",
-        "outputId": "a4253cef-d6eb-4f9e-802a-d946f81b0927",
+        "outputId": "893e13ba-5e15-4f2e-c9d0-d93e19de1b32",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -112,12 +102,15 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: google-ml-edu==0.1.3 in /usr/local/lib/python3.12/dist-packages (0.1.3)\n",
-            "Requirement already satisfied: keras~=3.8.0 in /usr/local/lib/python3.12/dist-packages (3.8.0)\n",
+            "Collecting google-ml-edu==0.1.3\n",
+            "  Downloading google_ml_edu-0.1.3-py3-none-any.whl.metadata (1.4 kB)\n",
+            "Collecting keras~=3.8.0\n",
+            "  Downloading keras-3.8.0-py3-none-any.whl.metadata (5.8 kB)\n",
             "Requirement already satisfied: matplotlib~=3.10.0 in /usr/local/lib/python3.12/dist-packages (3.10.0)\n",
             "Requirement already satisfied: numpy~=2.0.0 in /usr/local/lib/python3.12/dist-packages (2.0.2)\n",
             "Requirement already satisfied: pandas~=2.2.0 in /usr/local/lib/python3.12/dist-packages (2.2.2)\n",
-            "Requirement already satisfied: tensorflow~=2.18.0 in /usr/local/lib/python3.12/dist-packages (2.18.1)\n",
+            "Collecting tensorflow~=2.18.0\n",
+            "  Downloading tensorflow-2.18.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (4.1 kB)\n",
             "Requirement already satisfied: absl-py in /usr/local/lib/python3.12/dist-packages (from keras~=3.8.0) (1.4.0)\n",
             "Requirement already satisfied: rich in /usr/local/lib/python3.12/dist-packages (from keras~=3.8.0) (13.9.4)\n",
             "Requirement already satisfied: namex in /usr/local/lib/python3.12/dist-packages (from keras~=3.8.0) (0.1.0)\n",
@@ -148,7 +141,8 @@
             "Requirement already satisfied: typing-extensions>=3.6.6 in /usr/local/lib/python3.12/dist-packages (from tensorflow~=2.18.0) (4.15.0)\n",
             "Requirement already satisfied: wrapt>=1.11.0 in /usr/local/lib/python3.12/dist-packages (from tensorflow~=2.18.0) (1.17.3)\n",
             "Requirement already satisfied: grpcio<2.0,>=1.24.3 in /usr/local/lib/python3.12/dist-packages (from tensorflow~=2.18.0) (1.75.0)\n",
-            "Requirement already satisfied: tensorboard<2.19,>=2.18 in /usr/local/lib/python3.12/dist-packages (from tensorflow~=2.18.0) (2.18.0)\n",
+            "Collecting tensorboard<2.19,>=2.18 (from tensorflow~=2.18.0)\n",
+            "  Downloading tensorboard-2.18.0-py3-none-any.whl.metadata (1.6 kB)\n",
             "Requirement already satisfied: wheel<1.0,>=0.23.0 in /usr/local/lib/python3.12/dist-packages (from astunparse>=1.6.0->tensorflow~=2.18.0) (0.45.1)\n",
             "Requirement already satisfied: charset_normalizer<4,>=2 in /usr/local/lib/python3.12/dist-packages (from requests<3,>=2.21.0->tensorflow~=2.18.0) (3.4.3)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.12/dist-packages (from requests<3,>=2.21.0->tensorflow~=2.18.0) (3.10)\n",
@@ -161,17 +155,41 @@
             "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /usr/local/lib/python3.12/dist-packages (from rich->keras~=3.8.0) (2.19.2)\n",
             "Requirement already satisfied: mdurl~=0.1 in /usr/local/lib/python3.12/dist-packages (from markdown-it-py>=2.2.0->rich->keras~=3.8.0) (0.1.2)\n",
             "Requirement already satisfied: MarkupSafe>=2.1.1 in /usr/local/lib/python3.12/dist-packages (from werkzeug>=1.0.1->tensorboard<2.19,>=2.18->tensorflow~=2.18.0) (3.0.2)\n",
+            "Downloading google_ml_edu-0.1.3-py3-none-any.whl (9.4 kB)\n",
+            "Downloading keras-3.8.0-py3-none-any.whl (1.3 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m19.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading tensorflow-2.18.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (615.6 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m615.6/615.6 MB\u001b[0m \u001b[31m2.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading tensorboard-2.18.0-py3-none-any.whl (5.5 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.5/5.5 MB\u001b[0m \u001b[31m27.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: tensorboard, keras, tensorflow, google-ml-edu\n",
+            "  Attempting uninstall: tensorboard\n",
+            "    Found existing installation: tensorboard 2.19.0\n",
+            "    Uninstalling tensorboard-2.19.0:\n",
+            "      Successfully uninstalled tensorboard-2.19.0\n",
+            "  Attempting uninstall: keras\n",
+            "    Found existing installation: keras 3.10.0\n",
+            "    Uninstalling keras-3.10.0:\n",
+            "      Successfully uninstalled keras-3.10.0\n",
+            "  Attempting uninstall: tensorflow\n",
+            "    Found existing installation: tensorflow 2.19.0\n",
+            "    Uninstalling tensorflow-2.19.0:\n",
+            "      Successfully uninstalled tensorflow-2.19.0\n",
+            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "tensorflow-text 2.19.0 requires tensorflow<2.20,>=2.19.0, but you have tensorflow 2.18.1 which is incompatible.\n",
+            "tf-keras 2.19.0 requires tensorflow<2.20,>=2.19, but you have tensorflow 2.18.1 which is incompatible.\n",
+            "tensorflow-decision-forests 1.12.0 requires tensorflow==2.19.0, but you have tensorflow 2.18.1 which is incompatible.\u001b[0m\u001b[31m\n",
+            "\u001b[0mSuccessfully installed google-ml-edu-0.1.3 keras-3.8.0 tensorboard-2.18.0 tensorflow-2.18.1\n",
             "\n",
             "\n",
             "All requirements successfully installed.\n"
           ]
         }
       ],
-      "execution_count": 2
+      "execution_count": 1
     },
     {
       "metadata": {
-        "cellView": "form",
         "id": "wHBXW8ob16z3"
       },
       "cell_type": "code",
@@ -191,7 +209,7 @@
         "import plotly.express as px"
       ],
       "outputs": [],
-      "execution_count": null
+      "execution_count": 2
     },
     {
       "metadata": {
@@ -959,8 +977,7 @@
       "collapsed_sections": [
         "sgR4YRjj5T-b"
       ],
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
