--- a/ml/cc/exercises/linear_regression_taxi.ipynb
+++ b/ml/cc/exercises/linear_regression_taxi.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/AyushTomarOG/mltraining/blob/main/ml/cc/exercises/linear_regression_taxi.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "metadata": {
         "cellView": "form",
         "id": "X53vZqc7PxCA"
@@ -79,10 +89,10 @@
     {
       "metadata": {
         "id": "LihQB7ycKEnb",
-        "outputId": "893e13ba-5e15-4f2e-c9d0-d93e19de1b32",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "893e13ba-5e15-4f2e-c9d0-d93e19de1b32"
       },
       "cell_type": "code",
       "source": [
@@ -235,7 +245,7 @@
         "chicago_taxi_dataset = pd.read_csv(\"https://download.mlcc.google.com/mledu-datasets/chicago_taxi_train.csv\")"
       ],
       "outputs": [],
-      "execution_count": null
+      "execution_count": 3
     },
     {
       "metadata": {
@@ -252,7 +262,6 @@
     },
     {
       "metadata": {
-        "cellView": "form",
         "id": "YuLz6IgGP2LE"
       },
       "cell_type": "code",
@@ -977,7 +986,8 @@
       "collapsed_sections": [
         "sgR4YRjj5T-b"
       ],
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
